src/components/image-gallery/image-gallery.css
@import '../../../node_modules/swiper/swiper-bundle.css';

.image-gallery {
  @apply block lg:grid lg:grid-cols-10 lg:gap-8 fixed top-0 left-0 right-0 bottom-0 z-[800] px-16;

  opacity: 0;
  visibility: hidden;
  background: #fff;
  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;

  &--visible {
    opacity: 1;
    visibility: visible;
    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
  }

  &__info {
    @apply block lg:flex lg:flex-col lg:justify-between col-span-3 text-xs pt-12 pb-[2.75rem] z-20 cursor-default;

    background: #fff;

    &__title {
      @apply text-[2.5rem] font-light mb-3 leading-none;
    }

    &__subtitle {
      @apply text-xl mb-10 font-light;
    }

    &__photographer {
      &__label {
        @apply uppercase mb-1 font-light;
      }
      &__title {
        @apply uppercase mb-3 font-normal;
      }
    }
  }

  &__images {
    @apply block col-span-7 relative z-10;

    background: #f5f5f5;
    width: calc(100% + 4rem);

    &__swiper {
      position: absolute;
      top: 0;
      right: 0;
      left: 0;
      bottom: 0;
    }

    &__close {
      @apply underline underline-offset-2 uppercase cursor-pointer m-2 p-2 absolute top-0 right-0 text-xs z-10;

      background: #f5f5f5;
      border-radius: 5px;
    }
  }

  .swiper {
    width: 100%;
    height: 100vh;
    user-select: none;
  }

  .swiper-slide {
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    background: #f5f5f5;
  }

  .swiper-slide img {
    /* display: block; */
    object-fit: cover;
    max-width: 100%;
    max-height: 100%;
  }

  .swiper-button-prev,
  .swiper-button-next {
    color: #000;

    &::after {
      font-size: 1rem;
      height: 100vh;
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 0 6rem;
    }
  }

  .swiper-button-prev {
    cursor: w-resize;
  }

  .swiper-button-next {
    cursor: e-resize;
  }

  .swiper-pagination {
    top: 0px;
    right: 0px;
    display: inline-block;
    position: absolute;
    left: inherit;
    width: inherit;
    font-size: 0.75rem;
    z-index: 100;
  }
}

